wxc/include/wxc.h



/* Create/Delete */
void   wxCursor_Delete( TSelf(wxCursor) _obj );

void  wxDateTime_Delete(TSelf(wxDateTime) _obj);


/* wxMouseEvent */
int   wxMouseEvent_GetWheelDelta( TSelf(wxMouseEvent) _obj );

int   wxMouseEvent_GetWheelRotation( TSelf(wxMouseEvent) _obj );

int   wxMouseEvent_GetButton( TSelf(wxMouseEvent) _obj );

int   expEVT_MOUSEWHEEL(  );


void wxcGetMousePosition( TPointOut(x,y) );



/* wxDC */
double wxDC_GetUserScaleX( TSelf(wxDC) dc );

double wxDC_GetUserScaleY( TSelf(wxDC) dc );


/* listctrl */
int expEVT_SORT();

int expEVT_COMMAND_LIST_CACHE_HINT();

int expEVT_COMMAND_LIST_COL_RIGHT_CLICK();

int expEVT_COMMAND_LIST_COL_BEGIN_DRAG();

int expEVT_COMMAND_LIST_COL_DRAGGING();

int expEVT_COMMAND_LIST_COL_END_DRAG();


int wxListEvent_GetCacheFrom( TSelf(wxListEvent) _obj);

int wxListEvent_GetCacheTo( TSelf(wxListEvent) _obj);

/** Sort items in a list control. Takes a closure that is called with a 'CommandEvent' where the @Int@ is the item data of the first item and the @ExtraLong@ the item data of the second item. The event handler should set the @Int@ to 0 when the items are equal, -1 when the first is less, and 1 when the second is less. */
TBoolInt wxListCtrl_SortItems2(TSelf(wxListCtrl) _obj, TClass(wxClosure) closure );



/* dc */
/** Get the color of pixel. Note: this is not a portable method at the moment and its use is discouraged. */
void wxDC_GetPixel2( TSelf(wxDC) _obj, TPoint(x,y), TClassRef(wxColour) col);



/* wxObject */
TClassDef(wxObject)
TClass(wxClassInfo)  wxObject_GetClassInfo( TSelf(wxObject) _obj );

TBool       wxObject_IsKindOf( TSelf(wxObject) _obj, TClass(wxClassInfo) classInfo );

TBool       wxObject_IsScrolledWindow( TSelf(wxObject) _obj );



/* wxClassInfo */
TClassDef(wxClassInfo)
TClass(wxClassInfo)  wxClassInfo_FindClass( TString _txt );

TStringLen  wxClassInfo_GetBaseClassName1( TSelf(wxClassInfo) _obj, TStringOutVoid _buf );

TStringLen  wxClassInfo_GetBaseClassName2( TSelf(wxClassInfo) _obj, TStringOutVoid _buf );

TStringLen  wxClassInfo_GetClassNameEx( TSelf(wxClassInfo) _obj, TStringOutVoid _buf );

int         wxClassInfo_GetSize( TSelf(wxClassInfo) _obj );

TBool       wxClassInfo_IsKindOfEx( TSelf(wxClassInfo) _obj, TClass(wxClassInfo) classInfo );


/* Timers */
TClassDefExtend(wxTimerEx,wxTimer)
void               wxTimerEx_Connect( TSelf(wxTimerEx) _obj, TClass(wxClosure) closure );

TClass(wxTimerEx)  wxTimerEx_Create(  );

TClass(wxClosure)  wxTimerEx_GetClosure( TSelf(wxTimerEx) _obj );


/** Get the version number of wxWindows as a number composed of the major version times 1000, minor version times 100, and the release number. For example, release 2.1.15 becomes 2115. */
int wxVersionNumber();

/** Check if a preprocessor macro is defined. For example, @wxIsDefined("__WXGTK__")@ or @wxIsDefined("wxUSE_GIF")@. */
TBoolInt wxIsDefined( TString s );



/* new Events */
int expEVT_DELETE();

int expEVT_HTML_CELL_CLICKED();

int expEVT_HTML_CELL_MOUSE_HOVER();

int expEVT_HTML_LINK_CLICKED();

int expEVT_HTML_SET_TITLE();

int expEVT_INPUT_SINK();


/* Input sink */
TClassDefExtend(wxInputSink,wxThread)

/** Create an event driven input stream. It is unsafe to reference the original inputStream after this call! The last parameter @bufferLen@ gives the default input batch size. The sink is automatically destroyed whenever the input stream has no more input. */
TClass(wxInputSink) wxInputSink_Create( TClass(wxInputStream) input, TClass(wxEvtHandler) evtHandler, int bufferLen );

/** After creation, retrieve the @id@ of the sink to connect to @wxEVT_INPUT_SINK@ events. */
int   wxInputSink_GetId( TSelf(wxInputSink) obj );

/** After event connection, start non-blocking reading of the inputstream. This will generate @inputSinkEvent@ events. */
void  wxInputSink_Start( TSelf(wxInputSink) obj );


/* Input sink events */
TClassDefExtend(wxInputSinkEvent,wxEvent)

/** Get the input status (@wxSTREAM_NO_ERROR@ is ok). */
int wxInputSinkEvent_LastError( TSelf(wxInputSinkEvent) obj );

/** The number of characters in the input buffer. */
int wxInputSinkEvent_LastRead( TSelf(wxInputSinkEvent) obj );

/** The input buffer. */
char* wxInputSinkEvent_LastInput( TSelf(wxInputSinkEvent) obj );



/* html events */
TClassDefExtend(wxcHtmlEvent,wxCommandEvent)

TClass(wxMouseEvent) wxcHtmlEvent_GetMouseEvent( TSelf(wxcHtmlEvent) self );

TClass(wxHtmlCell)   wxcHtmlEvent_GetHtmlCell( TSelf(wxcHtmlEvent) self );

/** Return the /id/ attribute of the associated html cell (if applicable) */
TClass(wxString)     wxcHtmlEvent_GetHtmlCellId( TSelf(wxcHtmlEvent) self );

/** Return the /href/ attribute of the associated html anchor (if applicable) */
TClass(wxString)     wxcHtmlEvent_GetHref( TSelf(wxcHtmlEvent) self );

TClass(wxString)     wxcHtmlEvent_GetTarget( TSelf(wxcHtmlEvent) self );

void                 wxcHtmlEvent_GetLogicalPosition( TSelf(wxcHtmlEvent) self, TPointOut(x,y) );


/* html window */
TClassDefExtend(wxcHtmlWindow,wxHtmlWindow)
TClass(wxcHtmlWindow) wxcHtmlWindow_Create( TClass(wxWindow) _prt, int _id, TRect(_lft,_top,_wdt,_hgt), int _stl, TString _txt );


TClass(wxHtmlWindow) wxHtmlWindow_Create( TClass(wxWindow) _prt, int _id, TRect(_lft,_top,_wdt,_hgt), int _stl, TString _txt );

TBool                wxHtmlWindow_AppendToPage( TSelf(wxHtmlWindow) _obj, TString source );

TClass(wxHtmlContainerCell) wxHtmlWindow_GetInternalRepresentation( TSelf(wxHtmlWindow) _obj );

TStringLen           wxHtmlWindow_GetOpenedAnchor( TSelf(wxHtmlWindow) _obj, TStringOutVoid _buf ) ;

TStringLen           wxHtmlWindow_GetOpenedPage( TSelf(wxHtmlWindow) _obj, TStringOutVoid _buf );

TStringLen            wxHtmlWindow_GetOpenedPageTitle( TSelf(wxHtmlWindow) _obj, TStringOutVoid _buf );

TClass(wxFrame)      wxHtmlWindow_GetRelatedFrame( TSelf(wxHtmlWindow) _obj );

TBool                wxHtmlWindow_HistoryBack( TSelf(wxHtmlWindow) _obj);

TBool                wxHtmlWindow_HistoryCanBack( TSelf(wxHtmlWindow) _obj );

TBool                wxHtmlWindow_HistoryCanForward( TSelf(wxHtmlWindow) _obj );

void                 wxHtmlWindow_HistoryClear( TSelf(wxHtmlWindow) _obj);

TBool                wxHtmlWindow_HistoryForward( TSelf(wxHtmlWindow) _obj );

TBool                wxHtmlWindow_LoadPage( TSelf(wxHtmlWindow) _obj, TString location );

void                 wxHtmlWindow_ReadCustomization( TSelf(wxHtmlWindow) _obj, TClass(wxConfigBase) cfg, TString path);

void                 wxHtmlWindow_SetBorders( TSelf(wxHtmlWindow) _obj, int b );

void                 wxHtmlWindow_SetFonts( TSelf(wxHtmlWindow) _obj, TString normal_face, TString fixed_face, int * sizes );

void                 wxHtmlWindow_SetPage( TSelf(wxHtmlWindow) _obj, TString source );

void                 wxHtmlWindow_SetRelatedFrame( TSelf(wxHtmlWindow) _obj , TClass(wxFrame) frame, TString format );

void                 wxHtmlWindow_SetRelatedStatusBar( TSelf(wxHtmlWindow) _obj, int bar);

void                 wxHtmlWindow_WriteCustomization( TSelf(wxHtmlWindow) _obj, TClass(wxConfigBase) cfg, TString path );


/* logger */
TClass(wxLogStderr)   wxLogStderr_Create();

TClass(wxLogStderr)   wxLogStderr_CreateStdOut();

TClass(wxLogNull)     wxLogNull_Create();

TClass(wxLogTextCtrl) wxLogTextCtrl_Create( TClass(wxTextCtrl) text );

TClass(wxLogWindow)   wxLogWindow_Create( TClass(wxWindow) parent, TString title, TBoolInt showit, TBoolInt passthrough );

TClass(wxFrame)       wxLogWindow_GetFrame( TSelf(wxLogWindow) obj );


void   LogError(TStringVoid _msg);

void   LogFatalError(TStringVoid _msg);

void   LogWarning(TStringVoid _msg);

void   LogMessage(TStringVoid _msg);


void       wxLog_AddTraceMask( TSelf(wxLog) _obj, TStringVoid str );

void       wxLog_Delete( TSelf(wxLog) _obj );

void       wxLog_DontCreateOnDemand( TSelf(wxLog) _obj );

void       wxLog_Flush( TSelf(wxLog) _obj );

void       wxLog_FlushActive( TSelf(wxLog) _obj );

TClass(wxLog)  wxLog_GetActiveTarget(  );

char*      wxLog_GetTimestamp( TSelf(wxLog) _obj );

int        wxLog_GetTraceMask( TSelf(wxLog) _obj );

int        wxLog_GetVerbose( TSelf(wxLog) _obj );

TBool      wxLog_HasPendingMessages( TSelf(wxLog) _obj );

TBool      wxLog_IsAllowedTraceMask( TSelf(wxLog) _obj, TClass(wxMask) mask );

void       wxLog_OnLog( TSelf(wxLog) _obj, int level, TStringVoid szString, int t );

void       wxLog_RemoveTraceMask( TSelf(wxLog) _obj, TStringVoid str );

void       wxLog_Resume( TSelf(wxLog) _obj );

TClass(wxLog)  wxLog_SetActiveTarget( TSelf(wxLog) pLogger );

void       wxLog_SetTimestamp( TSelf(wxLog) _obj, TStringVoid ts );

void       wxLog_SetTraceMask( TSelf(wxLog) _obj, int ulMask );

void       wxLog_SetVerbose( TSelf(wxLog) _obj, TBoolInt bVerbose );

void       wxLog_Suspend( TSelf(wxLog) _obj );

void        wxcBell();

void        wxcBeginBusyCursor();

void        wxcEndBusyCursor();

void        wxcIsBusy();


/** Create from system colour. */
TClass(wxColour) wxcSystemSettingsGetColour( int systemColour );


/* malloc/free */
void* wxcMalloc(int size );

void  wxcFree( void* p );


/* wakeup idle */
void wxcWakeUpIdle();